# Project-Aurora

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  hardware_issue.yml
.github/workflows/: ci.yml
configs/: aurora.example.yaml
configs/hyperhdr/: README.md
configs/wled/: README.md
docs/: architecture.md  capture-capability-validation.md  capture-device-validation.md  capture-frame-validation.md  capture-mode-enumeration.md  ddp-output-validation.md  development.md  hardware.md  hyperhdr-validation.md  installation.md  licensing.md  roadmap.md  safety.md  single-zone-baseline-proof.md  troubleshooting.md  wled-validation.md
hardware/bom/: README.md
hardware/enclosure/: README.md
hardware/led-layout/: README.md
hardware/wiring/: README.md
scripts/: bootstrap.sh  check.sh
src/aurora_core/: __init__.py  __main__.py
src/aurora_core/config/: __init__.py  errors.py  loader.py  models.py
src/aurora_core/hardware/: __init__.py  capture_capability.py  capture_capability_probe.py  capture_device.py  capture_frame.py  capture_frame_probe.py  capture_modes.py  capture_modes_probe.py  capture_probe.py  ddp_output.py  ddp_output_probe.py  errors.py  hyperhdr.py  hyperhdr_transport.py  models.py  transport.py  (+2 more)
tests/: test_capture_capability.py  test_capture_device.py  test_capture_frame.py  test_capture_modes.py  test_config.py  test_ddp_output.py  test_hardware.py  test_package.py  test_runtime.py
(+7 files in other folders)
