[project]
name = "project-aurora"
version = "0.1.0"
description = "Scaffold for an open-source ambient-lighting platform."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Project Aurora Contributors" }]
dependencies = [
  "pydantic-settings>=2.10,<3",
  "PyYAML>=6.0,<7",
  "structlog>=25.4,<26",
]

[project.scripts]
aurora = "aurora_core.__main__:main"

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/aurora_core"]
